# qforge-2

./: .gitignore  3.21_Changes.txt  AUTHORS  GNUmakefile  HACKING  Makefile  Makefile.am  NEWS  README  THANKS  TODO  acinclude.m4  bootstrap  configure.in  makefile  makezip  quake2.spec.in
bsd/: Makefile  README  cd_bsd.c  gl_glx.c  q_shbsd.c  qgl_bsd.c  snd_bsd.c  sys_bsd.c  vid_so.c
client/: cl_cin.c  cl_ents.c  cl_fx.c  cl_main.c  cl_parse.c  cl_scrn.c  cl_tent.c  cl_view.c  client.h  console.c  keys.c  keys.h  menu.c  qmenu.c  ref.h  snd_dma.c
ctf/: g_ctf.c  g_save.c  g_svcmds.c  game.h  q_shared.h
data/: Makefile.am
data/baseq2/: Makefile.am  config.cfg
debian/: .gitignore  README.Debian  changelog  control  copyright  dirs  docs  menu  quake2.6  quake2.sh  quake2.xpm  quake2ctf.xpm  rules
docs/: Makefile.am  README.joystick  README.sdl  README.sound  changes-ctf.txt  changes.txt
docs/ctf/: Makefile.am
game/: .gitignore  Makefile.am  g_cmds.c  g_save.c  g_svcmds.c  game.h  m_boss31.c  m_boss32.c  q_shared.h
game/baseq2/: Makefile.am  g_save.c
game/ctf/: Makefile.am  g_ctf.c  g_save.c  game.h  q_shared.h
game/rogue/: Makefile.am
game/xatrix/: Makefile.am
irix/: README  cd_irix.c  glw_imp.c  qgl_irix.c  sys_irix.c  vid_so.c
linux/: .gitignore  Makefile  cd_linux.c  cd_sdl.c  gl_fxmesa.c  gl_glx.c  glob.c  glw_linux.h  net_udp.c  q_shlinux.c  qasm.h  qgl_linux.c  rw_in_svgalib.c  rw_sdl.c  rw_svgalib.c  rw_x11.c  snd_linux.c  sys_linux.c  vid_menu.c  vid_so.c
null/: README  cd_null.c  glimp_null.c  swimp_null.c
qcommon/: checksum.c  cmodel.c  common.c  cvar.c  files.c  mdfour.c  qcommon.h  quakeio.c  quakeio.h
ref_gl/: gl_image.c  gl_local.h  gl_model.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_warp.c  qgl.h
ref_soft/: d_copy.S  d_polysa.S  math.S  r_aclipa.S  r_alias.c  r_draw16.S  r_edge.c  r_image.c  r_local.h  r_main.c  r_misc.c  r_spr8.S  r_surf.c  r_surf8.S
rhapsody/: README
server/: .gitignore  server.h  sv_ccmds.c  sv_ents.c  sv_init.c  sv_main.c  sv_send.c
solaris/: README  sys_solaris.c
src/: .gitignore  Makefile  Makefile.am  adivtab.h  anorms.h  anormtab.h  asm_draw.h  block16.h  block8.h  cd.c  cd_sdl.c  cd_solaris.c  cdaudio.h  checksum.c  cl_cin.c  cl_ents.c  cl_fx.c  cl_input.c  cl_inv.c  cl_main.c  cl_newfx.c  cl_parse.c  cl_pred.c  cl_scrn.c  cl_tent.c  cl_view.c  client.h  cmd.c  cmodel.c  common.c  console.c  console.h  crc.c  crc.h  cvar.c  d_copy.S  d_ifacea.h  d_polysa.S  files.c  game.h  (+115 more)
src/baseq2/: .gitignore  Makefile.am  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_phys.c  g_save.c  g_spawn.c  g_target.c  g_turret.c  g_utils.c  g_weapon.c  m_actor.c  m_actor.h  m_berserk.c  m_berserk.h  m_boss2.c  m_boss2.h  m_boss3.c  m_boss31.c  m_boss31.h  m_boss32.c  m_boss32.h  m_brain.c  m_brain.h  m_chick.c  m_chick.h  m_flash.c  m_flipper.c  m_flipper.h  m_float.c  m_float.h  m_flyer.c  m_flyer.h  m_gladiator.c  (+29 more)
src/ctf/: Makefile.am  g_ai.c  g_chase.c  g_cmds.c  g_ctf.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_phys.c  g_save.c  g_spawn.c  g_target.c  g_utils.c  g_weapon.c  p_client.c  p_hud.c  p_menu.c  p_weapon.c  q_shared.c  q_shared.h
src/rogue/: .gitignore  LICENSE  Makefile.am
src/xatrix/: Makefile.am
tools/: q2rel
win32/: README  cd_win.c  glw_imp.c  glw_win.h  qgl_win.c  rw_imp.c  sys_win.c
